--- a/src/components/admin/ImageProductRegi.scss
+++ b/src/components/admin/ImageProductRegi.scss
@@ -89,13 +89,11 @@
       opacity: 0;
     }
   
-
-  
     .preview_wrapper {
       position: relative;
       width: 300px;
       height: 300px;
-      border: 1px solid #d3d8e1;
+      // border: 1px solid #d3d8e1;
       
       .preview_container {
         position: relative;
