--- a/src/components/admin/TableProductList.scss
+++ b/src/components/admin/TableProductList.scss
@@ -179,3 +179,119 @@
     display: inline-block;
   }
 }
+
+
+
+
+
+/* row 호버인데 중첩됨 이상함 */
+.ag-row-hover:not(.ag-full-width-row)::before {
+  background-color: transparent;
+}
+
+/* row 호버시 */
+.ag-row:hover {
+  background-color: var(--row-hover-color);
+}
+
+/* row 선택시 */
+.ag-row-selected::before {
+  background-color: var(--row-selected-color);
+}
+
+/* 선택된 row 호버시 */
+.ag-row-hover.ag-row-selected::before {
+  background-color: var(--row-selected-hover-color);
+  background-image: linear-gradient(var(--row-selected-hover-color), var(--row-selected-hover-color));
+}
+
+/* 선택된 셀 */
+.ag-ltr .ag-cell-focus:not(.ag-cell-range-selected):focus-within {
+  border-color: var(--cell-selected-color);
+  border-radius: 10px;
+}
+
+/* 체크 안된 박스 */
+.ag-checkbox-input-wrapper {
+  background-color: white;
+}
+
+/* 체크 안된 박스 after */
+.ag-checkbox-input-wrapper::after {
+  content: var(--ag-icon-font-code-checkbox-unchecked, "\f108");
+  color: var(--checkbox-unchecked-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+}
+
+/* 체크된 박스 */
+.ag-checkbox-input-wrapper.ag-checked::after {
+  content: var(--ag-icon-font-code-checkbox-checked, "\f106");
+  color: var(--checkbox-checked-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  /* color: #3a3a3a; */
+}
+
+/* 박스 그림자 */
+.ag-checkbox-input-wrapper:focus-within {
+  box-shadow: var(--input-focus-boxshadow-color);
+}
+
+.ag-row .ag-cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ag-header-cell-label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ag-cell-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ag-selection-checkbox {
+  margin-right: 0 !important;
+}
+
+.ag-paging-panel {
+  justify-content: space-around;
+}
+
+.ag-paging-page-size {
+  order: 3;
+}
+
+.ag-paging-row-summary-panel {
+  order: 1;
+}
+
+.ag-paging-page-summary-panel {
+  order: 2;
+}
+
+#ag-225-label {
+  display: none;
+}
+
+.ag-ltr .ag-header-select-all {
+  margin-left: 19px;
+}
+
+
+/* 색상 */
+
+.ag-header-cell {
+  background-color: var(--white-color) !important;
+  color: var(--grid-BG-color);
+}
