--- a/src/pages/shop/Shop.scss
+++ b/src/pages/shop/Shop.scss
@@ -1,3 +1,9 @@
+.NavCart-Count::before {
+    font-family: SF Pro Icons;
+    content: "\2715";
+    font-size: .75em;
+    color: #6e6e73;
+}
 
 .footer-wrap {
     background-color: #fafafa;
