--- a/src/pages/adminPage/Category.scss
+++ b/src/pages/adminPage/Category.scss
@@ -2,6 +2,10 @@
 
 .home-category {
 
+    input {
+        background-color: transparent;
+    }
+
     .cateInfo-title {
         font-size: 15px;
         font-weight: 700;
@@ -147,10 +151,10 @@
         .second {
             position: relative;
             flex: 40%;
-
-
+            
+            
             input {
-                background-color: #f5f5f7;
+                padding-left: 20px;
                 border-radius: 10px;
                 padding: 0 10px;
                 padding-right: 30px;
